# MuJoCo-Rust

./: .gitignore  Cargo.toml  LICENSE  README.md  rustfmt.toml
.github/workflows/: ci.yaml  crates.yml
ci/: build.bat
mujoco/: Cargo.toml  MUJOCO_LOG.TXT
mujoco-sys/: Cargo.toml  build.rs  wrapper.h
mujoco-sys/scripts/: gen-bindings.rs  generator.rs
mujoco-sys/src/: lib.rs  no_render.rs  render.rs
mujoco-sys/tests/: simple_env.rs
mujoco-sys/tests.broken/: simple_env.rs
mujoco/examples/: simple.rs
mujoco/src/: body.rs  geom.rs  helpers.rs  lib.rs  mesh.rs  model.rs  re_exports.rs  sim.rs  state.rs  vfs.rs
mujoco/src/model/: mod.rs
mujoco/tests/res/: simple.xml
