[package]
name = "mujoco-sys"
version = "0.1.3"
authors = ["Ryan Butler <thebutlah@gmail.com>"]
edition = "2018"
description = "FFI bindings to MuJoCo"
readme = "../README.md"
repository = "https://github.com/TheButlah/mujoco-rs/"
homepage = "https://github.com/TheButlah/mujoco-rs/"
license = "MIT"
keywords = ["ffi", "bindgen", "bindings", "mujoco"]
categories = ["external-ffi-bindings", "science::robotics", "simulation"]
links = "mujoco200"

[features]
default = ["mj-render"]

# If activated, will require MuJoCo's OpenGL dependencies to be installed, and
# enabes the `mjr_*` functions.
mj-render = []

[build-dependencies]
dirs = "3.0"

[dev-dependencies]
dirs = "3.0"
lazy_static = "1.4.0"
