[package]
name = "mujoco-sys"
version = "0.0.2"
authors = ["Ryan Butler <thebutlah@gmail.com>", "Aaron Law <aaronlaw1215@gmail.com>"]
edition = "2018"
description = "FFI bindings to MuJoCo"
readme = "../README.md"
repository = "https://github.com/aaronlaw1215/MuJoCo-Rust"
homepage = "https://github.com/aaronlaw1215/MuJoCo-Rust"
license = "MIT"
keywords = ["ffi", "bindgen", "bindings", "mujoco"]
categories = ["external-ffi-bindings", "science::robotics", "simulation"]
links = "mujoco"

[features]
default = ["mj-render"]

# If activated, will require MuJoCo's OpenGL dependencies to be installed, and
# enabes the `mjr_*` functions.
mj-render = []

[build-dependencies]
bindgen = "*"
dirs = "3.0"

[dev-dependencies]
dirs = "3.0"
lazy_static = "1.4.0"
