[package]
name = "mujoco"
version = "0.0.1"
authors = ["Ryan Butler <thebutlah@gmail.com>"]
edition = "2018"
description = "MuJoCo bindings for Rust"
readme = "../README.md"
repository = "https://github.com/TheButlah/mujoco-rs/"
homepage = "https://github.com/TheButlah/mujoco-rs/"
license = "MIT"
keywords = ["mujoco", "rl", "ml", "physics", "robotics"]
categories = ["api-bindings", "science::robotics", "simulation"]

[features]
default = ["mj-render"]

# If activated, will require MuJoCo's OpenGL dependencies to be installed, and
# enabes the `mjr_*` functions.
mj-render = ["mujoco-sys/mj-render"]

[dependencies]
mujoco-sys = { version = "0.1.4", path = "../mujoco-sys", default-features = false }
dirs = "3.0"
lazy_static = "1.4.0"
