[package]
name = "mujoco-rust"
version = "0.0.7"
authors = [
    "Ryan Butler <thebutlah@gmail.com>",
    "Aaron Law <aaronlaw1215@gmail.com>",
    "Sergei Surovtsev <ssurovsev@gmail.com>",
]
edition = "2018"
description = "MuJoCo bindings for Rust"
readme = "../README.md"
repository = "https://github.com/TheButlah/mujoco-rs/"
homepage = "https://github.com/TheButlah/mujoco-rs/"
license = "MIT"
keywords = ["mujoco", "rl", "ml", "physics", "robotics"]
categories = ["api-bindings", "science::robotics", "simulation"]

[features]
default = ["mj-render"]

# If activated, will require MuJoCo's OpenGL dependencies to be installed, and
# enabes the `mjr_*` functions.
mj-render = ["mujoco-rs-sys/mj-render"]

[dependencies]
mujoco-rs-sys = { version = "0.0.4", path = "../mujoco-sys", default-features = false }
dirs = "~5.0.0"
lazy_static = "1.4.0"
arrayvec = "0.7.2"
itertools = "0.10.5"
nalgebra = "0.32.0"
